k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moneyball
  namespace: moneyball
  labels:
    app.kubernetes.io/name: moneyball
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: moneyball
  ports:
    - name: http
      port: 80
      targetPort: http
